updated up to connected sum of surfaces

--- a/algebraic topology/algebraic topology math0023.tex
+++ b/algebraic topology/algebraic topology math0023.tex
@@ -1189,14 +1189,72 @@ $n$-subdivision points ($n\geq3$), so \[S^1(n)\sim S^1(m)\,\,\,\forall m,n\geq3\
 
 so for example, $S^1(3)$ is the triangle, $S^1(4)$ is the square, $S^1(5)$ the pentagon, and so on.
 
-\begin{eg}
-	some examples of orientation
-\end{eg}
-
+\section{Orientation Theorem}
 \begin{definition}[Orientability]
 	We say that a surface $\Sigma$ is orientable if and only if it is possible to orient
 	each $2$-simplex in such a way that every $1$-simplex receives the opposite orientations
 	from its containing $2$-simplices.
 \end{definition}
+
+\begin{eg}
+	orientability of $T^2$
+\end{eg}
+
+\begin{definition}[Euler Characteristic]
+	Let $X=(V_X,\mathcal{S}_X)$ be a finite simplicial complex. Let $c_n$ be the number of
+	$n$-simplices of $X$, \[c_n(X)=c_n=\text{no. of $n$-simplices of $X$}\] we define
+	\[\chi_\text{geom}(X)=\sum_{n}(-1)^n c_n(X)\]
+	This is known as the \emph{geometric} Euler characteristic. \\
+
+	Put $h_n^\mathbb{F}(X) = \dim H_n(X;\mathbb{F}) (=h_n)$, and define
+	\[\chi_\text{hom}^\mathbb{F}(X)=\sum_n (-1)^n h_n^\mathbb{F}(X)\]
+	This is known as the \emph{homological} Euler characteristic.
+\end{definition}
+
+We will show that 
+\begin{theorem}
+	\[\chi_\text{hom}^\mathbb{F}(X)=\chi_\text{geom}(X)\]
+\end{theorem}
+In particular $\chi_\text{hom}^\mathbb{F}$ is independent of $\mathbb{F}$, so we'll ignore
+$\mathbb{F}$.
+
+\begin{proof}
+	Fix a field $\mathbb{F}$. $c_n=c_n(X)=\text{no. of $n$-simplices of $X$}$
+	\[c_n=\dim C_n(X;\mathbb{F})\] so put $h_n=\dim H_n(X;\mathbb{F})$ and look at the 
+	sequence
+	\[C_{n+1}(X)\xrightarrow{\partial_{n+1}}C_n(X)\xrightarrow{\partial_n}C_{n-1}(X)\]
+	\[H_n(X)=\ker\partial_n/\text{im}\partial_{n+1}=Z_n(X)/B_n(X)\]
+	Put $z_n=\dim\ker\partial_n, \,b_n=\dim\text{im}(\partial_{n+1})$ so 
+	\[z_n=h_n+b_n\] However by the kernel-rank theorem,
+	\[c_n=z_n+b_{n-1}\] hence \[c_n=h_n+b_n+b_{n-1}\]
+	Now take the alternating sum 
+	\[\sum_{n} (-1)^n c_n=\sum_n (-1)^n h_n +\sum_n (-1)^n (b_n+b_{n-1})\]
+	The last term on the RHS evaluates to 0, and recognising what the other two sums are, we
+	have \[\chi_\text{hom}^\mathbb{F}(X)=\chi_\text{geom}(X)\]
+\end{proof}
+
+As $H_*(X;\mathbb{F})$ is invariant under subdivision, it follows that $\chi_\text{geom}(X)$
+is the same as well, so from now on, we will usually just write $\chi(X)$.
+
+\begin{eg}
+	euler characteristic examples
+	homology of real projective plane example
+\end{eg}
+
+\begin{definition}[Connected sum of surfaces]
+	Let $\Sigma, \,\Sigma'$ be surfaces. Let $\sigma$ be a $2$-simplex in $\Sigma, \,\sigma'$ 
+	be a $2$-simplex in $\Sigma'$. Let $\Sigma_0$ be the complex obtained from $\Sigma$ by 
+	removing $\sigma$. Likewise for $\Sigma_0'$. Formally,
+	\[\Sigma\#\Sigma'=\Sigma_0\bigcup_{\partial=\partial'}\Sigma_0'\]
+	(i.e., we glue the boundaries of $\Sigma_0$ and $\Sigma_0'$ together.)
+\end{definition}
+
+\begin{proposition}
+	\[\chi(\Sigma\#\Sigma')=\chi(\Sigma)+\chi(\Sigma')-2\]
+\end{proposition}
+
+\begin{eg}
+	examples of orientable surfaces, 2-sphere, 2-torus, etc.
+\end{eg}
 
 \end{document}
